--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,12 @@ serde_json = "1.0"
 # diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuid"] }
 
 # Web3相关
-ethers = { version = "2.0", features = ["rustls"] }
+ethers = { version = "2.0.13", features = ["rustls"] }
 web3 = "0.19.0"
-solana-client = "1.16.0"
-solana-sdk = "1.16.0"
+solana-client = "2.2.0"
+solana-sdk = "2.2.0"
+ethers-signers = "2.0.0"
+
 
 # 加密和安全
 jsonwebtoken = "8.3"
