refactor: 将数据库操作从Diesel迁移到Rbatis
本次提交将数据库操作从Diesel框架迁移到Rbatis框架，涉及用户、帖子、评论等模块的重构。主要改动包括：
1. 移除Diesel相关依赖和代码，引入Rbatis依赖。
2. 重构用户、帖子、评论等模型，适配Rbatis的CRUD操作。
3. 更新数据库查询逻辑，使用Rbatis的Wrapper和原生SQL进行查询。
4. 调整服务层代码，适配新的数据库操作方式。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # 数据库
-diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
-rbatis = { version = "4.3", features = ["postgres", "tokio-runtime"] }
-rbs = "4.3"
+rbatis = { version = "4.5.50"}
+rbs = { version = "4.5"}
+rbdc = { version = "4.5", default-features = false,  optional = true }
+fastdate = { version = "0.3" }
 
 # Web3相关
 ethers = { version = "2.0.13", features = ["rustls"] }
@@ -36,7 +37,7 @@ ethers-signers = "2.0.0"
 
 
 # 加密和安全
-jsonwebtoken = "8.3"
+jsonwebtoken = "9.3.1"
 sha2 = "0.10"
 hex = "0.4"
 rand = "0.9.0"
@@ -50,9 +51,9 @@ redis = { version = "0.23.0", features = ["tokio-comp"] }
 
 # 日志和配置
 log = "0.4"
-env_logger = "0.10"
+env_logger = "0.11.7"
 dotenv = "0.15"
-config = "0.13"
+config = "0.15.11"
 
 # 实用工具
 chrono = { version = "0.4", features = ["serde"] }
