--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # 数据库
-rbatis = { version = "4.5.50"}
+rbdc-pg={version="4.5"}
 rbs = { version = "4.5"}
 rbdc = { version = "4.5", default-features = false,  optional = true }
 fastdate = { version = "0.3" }
