--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,6 @@ description = "基于web3的社交匿名财富交流平台后端服务"
 incremental = true  # 启用增量编译
 codegen-units = 1   # 减少并行编译单元
 
-[features]
-default = ["tls-rustls"]
-tls-rustls=["rbdc/tls-rustls"]
-tls-native-tls=["rbdc/tls-native-tls"]
 
 [dependencies]
 # Web框架
@@ -27,10 +23,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # 数据库
+
+rbatis = { version = "4.5"}  # 必须包含这个核心依赖
+# rbdc-pg = "0.1"  # 根据实际使用的数据库类型
 rbs = { version = "4.5"}
-rbatis = { version = "4.5"}
-rbdc-sqlite = { version = "4.5" }
+# rbatis = { version = "4.5"}
 rbdc-pg={version="4.5"}
+
 fastdate = { version = "0.3" }
 
 # Web3相关
